# VRCFishFishing

./: .gitignore  AGENTS.md  MEMORY.md  README.md  audio_detector.py  get_window_title.py  input_handler.py  main.py  plan.md  pyproject.toml  requirements.txt  screen_capture.py  skills-lock.json  state_detector.py  tension_handler.py  utils.py
assets/: bite_sound.m4a
src/: audio_detector.py  config.py  input_handler.py  screen_capture.py  state_detector.py  tension_handler.py  utils.py
typings/: win32api.pyi  win32gui.pyi
