[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "vrc-fish-fishing"
dynamic = ["version"]
description = "VRChat Fish map automated fishing bot"
requires-python = ">=3.14"
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.26",
    "mss>=9.0",
    "sounddevice>=0.4",
    "scipy>=1.11",
    "pywin32>=306",
    "pygetwindow>=0.0.9",
    "soundcard>=0.4",
]

[tool.setuptools_scm]
